# coffeegis-geoprocessor-grpc

./: .dockerignore  .gitignore  Makefile  README.md  coffeegis-docker-compose.yml  docker-compose.yml  init.db  pyproject.toml
alembic/versions/: 1409a4c227f1_fixing_relationships_8.py  14e65299bde3_created_reviews_table.py  19cddd1d6642_changed_company_to_cafe_null.py  1c4c66a94d41_fixing_relationships_9.py  262abe040913_removed_cafe_company_name.py  2e7368ef7617_added_company_name_ru.py  2fc0e68ce7e7_fixing_relationships_5.py  341d2b4cac43_fixing_relationships_6.py  4b7db39b1f81_adding_roaster_and_description.py  5139721af974_creating_relationships.py  52392a724cb2_creating_tables.py  5862dbc65636_fixing_relationships_7.py  5b1ab55b338c_fixing_relationships_4.py  6b798a917d82_changed_company_to_cafe_not_null.py  8c1dc60a33bc_initial.py  91286ac50ebe_fixing_relationships_2.py  98d6c92f3364_changed_company_to_cafe_not_null.py  af4a016e3474_adding_image_uuid_field_to_cafe.py  b3043da7ae4c_creating_indicies.py  b4de6d2a0d7c_fixing_relationships_2.py  c645ab551955_fixing_relationships_3.py  c9f7474c525c_fixin_roaster.py  cb61dc3b0be3_fixing_relationships.py  d3d437bcd247_adding_image_uuid_field_to_cafe.py  d41959688955_minor_updates.py  d9d4a24e04d0_fixin_roaster.py  dc89f11a094d_changed_street_and_house_to_address.py  e36378dc88cf_changed_company_to_cafe.py  f31c0c1f790a_changed_company_to_cafe_non_null.py  (+2 more)
app/: main.py  settings.py
db/: models.py
geoutils/: coordinates_processor.py
proto/: main_service.proto  main_service_pb2.py
utils/: __init__.py
